--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "phosphor-react": "^1.4.1",
@@ -22,32 +23,32 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
     "@eslint/js": "^9.39.1",
+    "@storybook/addon-a11y": "^10.1.7",
+    "@storybook/addon-docs": "^10.1.7",
+    "@storybook/addon-vitest": "^10.1.7",
+    "@storybook/react-vite": "^10.1.7",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/browser-playwright": "^4.0.15",
+    "@vitest/coverage-v8": "^4.0.15",
     "autoprefixer": "^10.4.22",
-    "daisyui": "^5.5.5",
+    "daisyui": "^5.5.13",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-storybook": "^10.1.7",
     "globals": "^16.5.0",
+    "playwright": "^1.57.0",
     "postcss": "^8.5.6",
+    "storybook": "^10.1.7",
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
-    "storybook": "^10.1.7",
-    "@storybook/react-vite": "^10.1.7",
-    "@chromatic-com/storybook": "^4.1.3",
-    "@storybook/addon-vitest": "^10.1.7",
-    "@storybook/addon-a11y": "^10.1.7",
-    "@storybook/addon-docs": "^10.1.7",
-    "eslint-plugin-storybook": "^10.1.7",
-    "vitest": "^4.0.15",
-    "playwright": "^1.57.0",
-    "@vitest/browser-playwright": "^4.0.15",
-    "@vitest/coverage-v8": "^4.0.15"
+    "vitest": "^4.0.15"
   }
 }
