feat: Add GitHub Actions workflows for PR module tests and frontend release
- Implemented a new workflow for detecting changes in frontend modules on pull requests to the develop branch.
- Added a release workflow for the frontend that triggers on pushes to the main branch and successful completion of the "Auto Merge to Develop" workflow.
- Configured Artillery for load testing with detailed scenarios and performance thresholds.
- Created comprehensive documentation for Lighthouse authentication and performance testing.
- Developed authentication scripts for Lighthouse CI, including handling 2FA and session management.
- Enhanced Lighthouse configuration with custom assertions and Puppeteer integration for authenticated routes.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,18 @@ dist-ssr
 
 .env*
 !.env.example
+
+# Test coverage
+coverage
+*.lcov
+
+# Performance test reports
+artillery-report.json
+artillery-report.html
+.lighthouseci
+lighthouse-report*.html
+lighthouse-report*.json
+.lighthouse-auth-state.json
+
+# Temporary files
+.app.pid
