feat: Refactor GitHub Actions workflows for improved automation and consistency

--- a/.github/workflows/pr-modules-tests.yml
+++ b/.github/workflows/pr-modules-tests.yml
@@ -13,85 +13,13 @@ permissions:
   pull-requests: write
   checks: write
 
+concurrency:
+  group: pr-tests-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
+
 jobs:
-  detect-changes:
-    name: Detect Changed Modules
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend
-    outputs:
-      modules-matrix: ${{ steps.detect.outputs.modules-matrix }}
-      has-changes: ${{ steps.detect.outputs.has-changes }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-
-      - name: Detect changed modules
-        id: detect
-        shell: bash
-        run: |
-          set -euo pipefail
-
-          # Fetch develop branch for comparison
-          git fetch origin develop --no-tags
-
-          # Get all changed files
-          ALL_CHANGED_FILES=$(git diff --name-only origin/develop...HEAD || true)
-
-          echo "All changed files:"
-          echo "$ALL_CHANGED_FILES"
-
-          # Get changed files in frontend/src/ only
-          CHANGED_SRC_FILES=$(echo "$ALL_CHANGED_FILES" | grep "^frontend/src/" || true)
-
-          if [ -z "$CHANGED_SRC_FILES" ]; then
-            echo "No changes in frontend/src/"
-            echo "has-changes=false" >> $GITHUB_OUTPUT
-            echo "modules-matrix={\"include\":[]}" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-
-          echo "Changed source files:"
-          echo "$CHANGED_SRC_FILES"
-
-          # Build modules list
-          declare -A MODULES
-
-          while IFS= read -r file; do
-            # Match: frontend/src/<module>/...
-            if [[ $file =~ ^frontend/src/([^/]+)/ ]]; then
-              module="${BASH_REMATCH[1]}"
-              # Skip common, assets, and non-module files
-              if [[ "$module" != "assets" && "$module" != "App.tsx" && "$module" != "App.css" && "$module" != "main.tsx" && "$module" != "index.css" ]]; then
-                MODULES[$module]=1
-              fi
-            fi
-          done <<< "$CHANGED_SRC_FILES"
-
-          # Build JSON matrix
-          MATRIX_ITEMS=()
-          for module in "${!MODULES[@]}"; do
-            echo "Module: $module"
-            MATRIX_ITEMS+=("{\"module\":\"$module\"}")
-          done
-
-          if [ ${#MATRIX_ITEMS[@]} -eq 0 ]; then
-            echo "has-changes=false" >> $GITHUB_OUTPUT
-            echo "modules-matrix={\"include\":[]}" >> $GITHUB_OUTPUT
-          else
-            echo "has-changes=true" >> $GITHUB_OUTPUT
-            MATRIX_JSON="{\"include\":[$(IFS=,; echo "${MATRIX_ITEMS[*]}")]}"
-            echo "modules-matrix=$MATRIX_JSON" >> $GITHUB_OUTPUT
-            echo "Generated matrix: $MATRIX_JSON"
-          fi
-
   test-modules:
-    name: Lint & Build
-    needs: detect-changes
-    if: needs.detect-changes.outputs.has-changes == 'true'
+    name: Lint, Test & Build
     uses: ./.github/workflows/ci-common.yml
     with:
       path: ./frontend
