--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -2,7 +2,11 @@ name: Auto Merge to Develop
 
 on:
   pull_request:
-    types: [labeled, synchronize, opened, reopened, ready_for_review]
+    types: [labeled, unlabeled, synchronize, opened, reopened, ready_for_review]
+    branches:
+      - develop
+  pull_request_target:
+    types: [closed]
     branches:
       - develop
 
@@ -10,11 +14,18 @@ permissions:
   contents: write
   pull-requests: write
 
+concurrency:
+  group: auto-merge-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
+
 jobs:
   automerge:
-    if:
-      github.event.pull_request.base.ref == 'develop' && contains(github.event.pull_request.labels.*.name, 'automerge')
+    if: |
+      github.event_name == 'pull_request' &&
+      github.event.pull_request.base.ref == 'develop' &&
+      contains(github.event.pull_request.labels.*.name, 'automerge')
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -37,21 +48,45 @@ jobs:
         if: always()
         run: echo "Automerge step finished (check logs for details)"
 
+  cleanup:
+    if: |
+      github.event_name == 'pull_request_target' &&
+      github.event.pull_request.merged == true &&
+      github.event.pull_request.base.ref == 'develop'
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
       - name: Supprimer la branche source après merge
-        if: github.event.pull_request && github.event.pull_request.merged == true
         uses: actions/github-script@v7
         with:
           script: |
             const headRef = context.payload.pull_request.head.ref;
             const baseRef = context.payload.pull_request.base.ref;
-            if (headRef && baseRef && headRef !== baseRef && headRef !== 'develop' && headRef !== 'main') {
-              console.log(`Deleting branch ${headRef}`);
+            const protectedBranches = ['develop', 'main', 'master'];
+            
+            if (!headRef || !baseRef) {
+              console.log('❌ Impossible de déterminer les branches');
+              return;
+            }
+            
+            if (protectedBranches.includes(headRef)) {
+              console.log(`⚠️ Branche protégée (${headRef}) - pas de suppression`);
+              return;
+            }
+            
+            if (headRef === baseRef) {
+              console.log('⚠️ La branche source et cible sont identiques');
+              return;
+            }
+            
+            try {
+              console.log(`🗑️ Suppression de la branche ${headRef}...`);
               await github.rest.git.deleteRef({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 ref: `heads/${headRef}`
               });
-              console.log(`Branche supprimée : ${headRef}`);
-            } else {
-              console.log('Aucune suppression de branche nécessaire');
+              console.log(`✅ Branche supprimée : ${headRef}`);
+            } catch (error) {
+              console.log(`❌ Erreur lors de la suppression: ${error.message}`);
             }
