--- a/.github/workflows/ci-common.yml
+++ b/.github/workflows/ci-common.yml
@@ -16,8 +16,9 @@ on:
 
 jobs:
   lint-and-build:
-    name: Lint & Build
+    name: Lint, Test & Build
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     defaults:
       run:
         working-directory: ${{ inputs.path }}
@@ -28,20 +29,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Node
+      - name: Setup Node with cache
         uses: actions/setup-node@v5
         with:
           node-version: ${{ inputs.node-version }}
-
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            ${{ inputs.path }}/node_modules
-          key: ${{ runner.os }}-node-${{ inputs.node-version }}-${{ hashFiles(format('{0}/package-lock.json', inputs.path)) }}
-          restore-keys: |
-            ${{ runner.os }}-node-${{ inputs.node-version }}-
+          cache: 'npm'
+          cache-dependency-path: ${{ format('{0}/package-lock.json', inputs.path) }}
 
       - name: Install dependencies
         run: npm ci
