--- a/.github/workflows/develop-pipeline.yml
+++ b/.github/workflows/develop-pipeline.yml
@@ -10,9 +10,14 @@ permissions:
   id-token: write
   actions: write
 
+concurrency:
+  group: develop-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   full-audit:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     defaults:
       run:
         working-directory: ./frontend
@@ -26,16 +31,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "22"
-
-      - name: Cache npm dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            ./frontend/node_modules
-          key: ${{ runner.os }}-npm-${{ hashFiles('./frontend/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
+          cache: 'npm'
+          cache-dependency-path: './frontend/package-lock.json'
 
       - name: Install dependencies
         run: npm ci
@@ -60,6 +57,7 @@ jobs:
 
   performance-tests:
     needs: full-audit
+    timeout-minutes: 20
     uses: ./.github/workflows/performance-tests.yml
     with:
       path: ./frontend
@@ -68,8 +66,9 @@ jobs:
     secrets: inherit
 
   docker-build-push:
-    needs: [full-audit, performance-tests]
+    needs: full-audit
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     defaults:
       run:
         working-directory: ./frontend
@@ -88,60 +87,86 @@ jobs:
   semantic-release:
     needs: [full-audit, performance-tests, docker-build-push]
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     defaults:
       run:
         working-directory: ./frontend
     outputs:
-      tag-pushed: ${{ steps.semantic.outputs.tag-pushed }}
+      new-release-published: ${{ steps.semantic.outputs.new-release-published }}
+      new-release-version: ${{ steps.semantic.outputs.new-release-version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "22"
+          cache: 'npm'
+          cache-dependency-path: './frontend/package-lock.json'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Semantic Release
+      - name: Semantic Pre-Release (develop)
         id: semantic
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          NPM_TOKEN='${{ secrets.NPM_TOKEN }}'
-          if [ -z "$NPM_TOKEN" ]; then
-            echo "NPM_TOKEN not set - skipping semantic-release"
-            echo "tag-pushed=false" >> $GITHUB_OUTPUT
+          # Créer une pré-release pour develop avec suffixe -dev
+          npx semantic-release \
+            --branches '["develop"]' \
+            --tag-format 'v\${version}-dev' \
+            --dry-run false || echo "No release needed"
+          
+          # Vérifier si un tag a été créé
+          if git describe --exact-match HEAD 2>/dev/null; then
+            echo "new-release-published=true" >> $GITHUB_OUTPUT
+            VERSION=$(git describe --exact-match HEAD | sed 's/v//' | sed 's/-dev//')
+            echo "new-release-version=$VERSION" >> $GITHUB_OUTPUT
           else
-            echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
-            if npx semantic-release; then
-              echo "tag-pushed=true" >> $GITHUB_OUTPUT
-            else
-              echo "tag-pushed=false" >> $GITHUB_OUTPUT
-            fi
+            echo "new-release-published=false" >> $GITHUB_OUTPUT
           fi
 
   merge-to-main:
     needs: semantic-release
     runs-on: ubuntu-latest
-    if: needs.semantic-release.outputs.tag-pushed == 'true'
+    timeout-minutes: 5
+    if: needs.semantic-release.outputs.new-release-published == 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Fast-forward develop -> main
+      - name: Configure Git
         run: |
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
-          git fetch origin main
-          git fetch origin develop
+
+      - name: Validate and fast-forward develop -> main
+        run: |
+          # Fetch branches
+          git fetch origin main develop --no-tags
+          
+          # Vérifier que main n'a pas divergé de develop
+          if ! git merge-base --is-ancestor origin/main origin/develop; then
+            echo "::error::main has commits that develop doesn't have!"
+            echo "::error::Cannot fast-forward. Manual intervention required."
+            exit 1
+          fi
+          
+          # Checkout main et merge
           git checkout main
           git merge --ff-only origin/develop || {
-            echo "Fast-forward failed (conflict or non-fast-forward)";
+            echo "::error::Fast-forward merge failed";
             exit 1;
           }
+          
+          # Push
           git push origin main
+          echo "✅ Successfully fast-forwarded develop to main"
