--- a/.github/workflows/develop-pipeline.yml
+++ b/.github/workflows/develop-pipeline.yml
@@ -18,9 +18,6 @@ jobs:
   full-audit:
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    defaults:
-      run:
-        working-directory: ./frontend
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -59,7 +56,7 @@ jobs:
     needs: full-audit
     uses: ./.github/workflows/performance-tests.yml
     with:
-      path: ./frontend
+      path: .
       node-version: "22"
       app-url: "http://localhost:5173"
     secrets: inherit
@@ -68,9 +65,6 @@ jobs:
     needs: full-audit
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    defaults:
-      run:
-        working-directory: ./frontend
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -87,9 +81,6 @@ jobs:
     needs: [full-audit, performance-tests, docker-build-push]
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    defaults:
-      run:
-        working-directory: ./frontend
     outputs:
       new-release-published: ${{ steps.semantic.outputs.new-release-published }}
       new-release-version: ${{ steps.semantic.outputs.new-release-version }}
@@ -105,7 +96,7 @@ jobs:
         with:
           node-version: "22"
           cache: 'npm'
-          cache-dependency-path: './frontend/package-lock.json'
+          cache-dependency-path: 'package-lock.json'
 
       - name: Install dependencies
         run: npm ci
