--- a/.github/workflows/release-frontend.yml
+++ b/.github/workflows/release-frontend.yml
@@ -18,7 +18,7 @@ jobs:
   lint-and-build:
     uses: ./.github/workflows/ci-common.yml
     with:
-      path: ./frontend
+      path: .
       node-version: "22"
     secrets: inherit
 
@@ -26,9 +26,6 @@ jobs:
     needs: lint-and-build
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    defaults:
-      run:
-        working-directory: ./frontend
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -41,7 +38,7 @@ jobs:
         with:
           node-version: 22
           cache: 'npm'
-          cache-dependency-path: './frontend/package-lock.json'
+          cache-dependency-path: 'package-lock.json'
 
       - name: Install dependencies
         run: npm ci
