--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "lint:report:html": "npx eslint \"./**/*.{tsx,ts}\" --format html -o ./.reports/lint-report.html",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -17,6 +18,7 @@
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.1.8",
     "phosphor-react": "^1.4.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
