--- a/.github/workflows/ci-common.yml
+++ b/.github/workflows/ci-common.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/setup-node@v5
         with:
           node-version: ${{ inputs.node-version }}
-          cache: 'npm'
+          cache: "npm"
           cache-dependency-path: ${{ format('{0}/package-lock.json', inputs.path) }}
 
       - name: Install dependencies
@@ -42,13 +42,23 @@ jobs:
       - name: Run Lint
         run: npm run lint
 
+      - name: Check if test script exists
+        id: check-test
+        run: |
+          if npm run | grep -q "test"; then
+            echo "has-test=true" >> $GITHUB_OUTPUT
+          else
+            echo "has-test=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Run Tests with Coverage
+        if: steps.check-test.outputs.has-test == 'true'
         run: npm test -- --coverage --passWithNoTests
         env:
           CI: true
 
       - name: Upload Coverage Reports
-        if: always()
+        if: steps.check-test.outputs.has-test == 'true'
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
