--- a/.github/workflows/develop-pipeline.yml
+++ b/.github/workflows/develop-pipeline.yml
@@ -28,8 +28,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "22"
-          cache: 'npm'
-          cache-dependency-path: './frontend/package-lock.json'
+          cache: "npm"
+          cache-dependency-path: "package-lock.json"
 
       - name: Install dependencies
         run: npm ci
@@ -95,8 +95,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "22"
-          cache: 'npm'
-          cache-dependency-path: 'package-lock.json'
+          cache: "npm"
+          cache-dependency-path: "package-lock.json"
 
       - name: Install dependencies
         run: npm ci
@@ -111,7 +111,7 @@ jobs:
             --branches '["develop"]' \
             --tag-format 'v\${version}-dev' \
             --dry-run false || echo "No release needed"
-          
+
           # Vérifier si un tag a été créé
           if git describe --exact-match HEAD 2>/dev/null; then
             echo "new-release-published=true" >> $GITHUB_OUTPUT
@@ -142,21 +142,21 @@ jobs:
         run: |
           # Fetch branches
           git fetch origin main develop --no-tags
-          
+
           # Vérifier que main n'a pas divergé de develop
           if ! git merge-base --is-ancestor origin/main origin/develop; then
             echo "::error::main has commits that develop doesn't have!"
             echo "::error::Cannot fast-forward. Manual intervention required."
             exit 1
           fi
-          
+
           # Checkout main et merge
           git checkout main
           git merge --ff-only origin/develop || {
             echo "::error::Fast-forward merge failed";
             exit 1;
           }
-          
+
           # Push
           git push origin main
           echo "✅ Successfully fast-forwarded develop to main"
