--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -17,109 +17,15 @@ on:
         description: "URL of the application to test"
         required: false
         type: string
-        default: "http://localhost:5173"
+        default: "http://localhost:4173"
   workflow_dispatch:
     inputs:
       app-url:
         description: "URL of the application to test"
         required: false
-        default: "http://localhost:5173"
+        default: "http://localhost:4173"
 
 jobs:
-  artillery-tests:
-    name: Artillery Load Tests
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ inputs.path }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-
-      - name: Setup Node
-        uses: actions/setup-node@v5
-        with:
-          node-version: ${{ inputs.node-version }}
-
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            ${{ inputs.path }}/node_modules
-          key: ${{ runner.os }}-node-${{ inputs.node-version }}-${{ hashFiles(format('{0}/package-lock.json', inputs.path)) }}
-          restore-keys: |
-            ${{ runner.os }}-node-${{ inputs.node-version }}-
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Install Artillery
-        run: npm install -g artillery@latest
-
-      - name: Build application
-        run: npm run build
-
-      - name: Start application in background
-        run: |
-          npm run preview &
-          echo $! > .app.pid
-          sleep 10
-        env:
-          CI: true
-
-      - name: Wait for application to be ready
-        run: |
-          timeout 60 bash -c 'until curl -f ${{ inputs.app-url }}; do sleep 2; done' || exit 1
-
-      - name: Run Artillery load tests
-        run: |
-          if [ -f "artillery.yml" ]; then
-            artillery run artillery.yml --output artillery-report.json
-          else
-            echo "No artillery.yml found, creating basic test..."
-            cat > artillery-basic.yml << 'EOF'
-          config:
-            target: "${{ inputs.app-url }}"
-            phases:
-              - duration: 60
-                arrivalRate: 5
-                name: "Warm up"
-              - duration: 120
-                arrivalRate: 10
-                name: "Sustained load"
-          scenarios:
-            - name: "Basic user flow"
-              flow:
-                - get:
-                    url: "/"
-          EOF
-            artillery run artillery-basic.yml --output artillery-report.json
-          fi
-
-      - name: Generate Artillery HTML report
-        if: always()
-        run: |
-          artillery report artillery-report.json --output artillery-report.html
-
-      - name: Upload Artillery Reports
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: artillery-reports
-          path: |
-            ${{ inputs.path }}/artillery-report.json
-            ${{ inputs.path }}/artillery-report.html
-          retention-days: 30
-
-      - name: Stop application
-        if: always()
-        run: |
-          if [ -f .app.pid ]; then
-            kill $(cat .app.pid) || true
-            rm .app.pid
-          fi
-
   lighthouse-tests:
     name: Lighthouse Performance Audit
     runs-on: ubuntu-latest
@@ -141,7 +47,9 @@ jobs:
           path: |
             ~/.npm
             ${{ inputs.path }}/node_modules
-          key: ${{ runner.os }}-node-${{ inputs.node-version }}-${{ hashFiles(format('{0}/package-lock.json', inputs.path)) }}
+          key:
+            ${{ runner.os }}-node-${{ inputs.node-version }}-${{ hashFiles(format('{0}/package-lock.json', inputs.path))
+            }}
           restore-keys: |
             ${{ runner.os }}-node-${{ inputs.node-version }}-
 
@@ -235,7 +143,7 @@ jobs:
           script: |
             const fs = require('fs');
             const path = require('path');
-            
+
             try {
               const manifestPath = path.join('${{ inputs.path }}', '.lighthouseci', 'manifest.json');
               if (fs.existsSync(manifestPath)) {
