--- a/.github/workflows/storybook-preview.yml
+++ b/.github/workflows/storybook-preview.yml
@@ -18,7 +18,100 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  detect-changes:
+    name: Detect Changed Components
+    runs-on: ubuntu-latest
+    outputs:
+      components: ${{ steps.detect.outputs.components }}
+      has-changes: ${{ steps.detect.outputs.has-changes }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
+      - name: Detect changed components
+        id: detect
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          # Fetch base branch for comparison
+          BASE_BRANCH="${{ github.event.pull_request.base.ref }}"
+          git fetch origin $BASE_BRANCH --no-tags
+
+          # Get all changed files
+          ALL_CHANGED_FILES=$(git diff --name-only origin/$BASE_BRANCH...HEAD || true)
+
+          echo "All changed files:"
+          echo "$ALL_CHANGED_FILES"
+
+          # Get changed files in src/ only (components, stories, etc.)
+          CHANGED_SRC_FILES=$(echo "$ALL_CHANGED_FILES" | grep "^src/" || true)
+
+          if [ -z "$CHANGED_SRC_FILES" ]; then
+            echo "No changes in src/"
+            echo "has-changes=false" >> $GITHUB_OUTPUT
+            echo "components=" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          echo "Changed source files:"
+          echo "$CHANGED_SRC_FILES"
+
+          # Build components list
+          declare -A COMPONENTS
+          declare -A COMPONENT_HAS_CODE
+
+          # First pass: find all .stories.ts(x) files
+          while IFS= read -r file; do
+            if [[ $file =~ ^src/.*/([^/]+)\.stories\.(tsx?|jsx?)$ ]]; then
+              component="${BASH_REMATCH[1]}"
+              COMPONENTS[$component]=1
+            fi
+          done <<< "$CHANGED_SRC_FILES"
+
+          # Second pass: check if corresponding component code was also modified
+          while IFS= read -r file; do
+            if [[ $file =~ ^src/.*/([^/]+)\.(tsx?|jsx?)$ ]] && [[ ! $file =~ \.stories\. ]]; then
+              component="${BASH_REMATCH[1]}"
+              # Only track if this component has a story
+              if [[ -n "${COMPONENTS[$component]}" ]]; then
+                COMPONENT_HAS_CODE[$component]=1
+              fi
+            fi
+          done <<< "$CHANGED_SRC_FILES"
+
+          # Build comma-separated list with details
+          COMPONENTS_LIST=""
+          for component in "${!COMPONENTS[@]}"; do
+            has_code="${COMPONENT_HAS_CODE[$component]:-false}"
+            
+            if [[ "$has_code" == "1" ]]; then
+              detail="story+code"
+            else
+              detail="story"
+            fi
+            
+            if [ -z "$COMPONENTS_LIST" ]; then
+              COMPONENTS_LIST="$component:$detail"
+            else
+              COMPONENTS_LIST="$COMPONENTS_LIST,$component:$detail"
+            fi
+          done
+
+          if [ -z "$COMPONENTS_LIST" ]; then
+            echo "has-changes=false" >> $GITHUB_OUTPUT
+            echo "components=" >> $GITHUB_OUTPUT
+          else
+            echo "has-changes=true" >> $GITHUB_OUTPUT
+            echo "components=$COMPONENTS_LIST" >> $GITHUB_OUTPUT
+            echo "Changed components: $COMPONENTS_LIST"
+          fi
+
   build-storybook:
+    name: Build Storybook
+    needs: detect-changes
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
@@ -50,15 +143,57 @@ jobs:
         with:
           script: |
             const prNumber = context.issue.number;
-            const runId = context.runId;
-            const repo = context.repo;
+
+            // Get changed components
+            const componentsStr = '${{ needs.detect-changes.outputs.components }}';
+            const hasChanges = '${{ needs.detect-changes.outputs.has-changes }}';
+
+            let componentsSection = '';
+            if (hasChanges === 'true' && componentsStr) {
+              const componentsList = componentsStr.split(',');
+              componentsSection = `\n### 🎨 Modified Stories\n\n`;
+              
+              const storyAndCode = [];
+              const storyOnly = [];
+              
+              componentsList.forEach(item => {
+                const [comp, type] = item.split(':');
+                if (type === 'story+code') {
+                  storyAndCode.push(comp);
+                } else {
+                  storyOnly.push(comp);
+                }
+              });
+              
+              if (storyAndCode.length > 0) {
+                componentsSection += `**📖 Story + Implementation:**\n`;
+                storyAndCode.forEach(comp => {
+                  componentsSection += `- \`${comp}\` 🔄\n`;
+                });
+              }
+              
+              if (storyOnly.length > 0) {
+                if (storyAndCode.length > 0) componentsSection += `\n`;
+                componentsSection += `**📚 Story Only:**\n`;
+                storyOnly.forEach(comp => {
+                  componentsSection += `- \`${comp}\`\n`;
+                });
+              }
+              
+              componentsSection += `\n**Total:** ${componentsList.length} story/stories modified\n`;
+            } else {
+              componentsSection = '\n_No stories detected (configuration or global changes)_\n';
+            }
 
             const comment = `## 📚 Storybook Preview Built Successfully
 
             ✅ Storybook has been built for this PR.
-
+            ${componentsSection}
             **To view the preview:**
             1. Go to the [workflow run](https://github.com/${repo.owner}/${repo.repo}/actions/runs/${runId})
+            2. Download the \`storybook-preview-${prNumber}\` artifact
+            3. Extract and open \`index.html\` in your browser
+            4. Navigate to the modified components in the sidebarepo.owner}/${repo.repo}/actions/runs/${runId})
             2. Download the \`storybook-preview-${prNumber}\` artifact
             3. Extract and open \`index.html\` in your browser
 
