--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -41,6 +41,11 @@ jobs:
         with:
           node-version: ${{ inputs.node-version }}
 
+      - name: Setup Chrome
+        uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: stable
+
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
