--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
@@ -51,7 +52,7 @@
     "eslint-plugin-unused-imports": "^4.3.0",
     "globals": "^16.5.0",
     "playwright": "^1.57.0",
-    "postcss": "^8.5.6",
+    "sass-embedded": "^1.97.1",
     "storybook": "^10.1.7",
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
