--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "prettier-plugin-tailwindcss": "^0.7.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6",
+    "react-router": "^7.12.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
   },
