--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
     "lint:report:html": "npx eslint \"./**/*.{tsx,ts}\" --format html -o ./.reports/lint-report.html",
-    "preview": "vite preview",
+    "lint:prettier": "prettier --check .",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "lint:prettier": "prettier --check ."
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
