ajoute une étape pour fixer npm à la version 9 dans le workflow CI

--- a/.github/workflows/ci-common.yml
+++ b/.github/workflows/ci-common.yml
@@ -36,6 +36,9 @@ jobs:
           cache: "npm"
           cache-dependency-path: ${{ format('{0}/package-lock.json', inputs.path) }}
 
+      - name: Pin npm to v9
+        run: npm i -g npm@9
+
       - name: Install dependencies
         run: npm ci
 
