fix: corriger une erreur de syntaxe dans le fichier de workflow pour la plateforme

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -51,4 +51,4 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platform: linux/amd64, linux/arm64
+          platforms: linux/amd64, linux/arm64
