--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "eslint-config-prettier": "^10.1.8",
     "phosphor-react": "^1.4.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
