feat: add semantic release and CI/CD workflows
- Updated package.json to include semantic release dependencies.
- Created auto-merge workflow for pull requests to develop branch.
- Added common CI workflow for linting and building projects.
- Established a develop pipeline for automated testing, building, and releasing.
- Implemented performance testing workflow using Lighthouse CI.
- Created PR module tests to ensure code quality on pull requests.
- Added Docker image build and publish workflow for releases.
- Set up frontend release workflow for production.
- Developed Storybook deployment workflow for visual component previews.
- Implemented Storybook preview workflow for pull requests with change detection and reporting.

--- a/.github/bak/publish.yaml
+++ b/.github/bak/publish.yaml
@@ -6,7 +6,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/la-pince-front
+  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/mimouss-frontend
 
 concurrency:
   group: publish-${{ github.ref }}
