--- a/.github/workflows/ci-common.yml
+++ b/.github/workflows/ci-common.yml
@@ -1,4 +1,4 @@
-name: CI Common - Lint and Build
+name: CI Common - Frontend
 
 on:
   workflow_call:
@@ -15,7 +15,7 @@ on:
         default: "22"
 
 jobs:
-  lint-and-build:
+  lint-test-build:
     name: Lint, Test & Build
     runs-on: ubuntu-latest
     timeout-minutes: 15
@@ -25,19 +25,16 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
         with:
           fetch-depth: 0
 
-      - name: Setup Node with cache
-        uses: actions/setup-node@v5
+      - name: Setup Node
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ inputs.node-version }}
           cache: "npm"
           cache-dependency-path: ${{ format('{0}/package-lock.json', inputs.path) }}
-
-      - name: Pin npm to v9
-        run: npm i -g npm@9
 
       - name: Install dependencies
         run: npm ci
@@ -45,35 +42,26 @@ jobs:
       - name: Run Lint
         run: npm run lint
 
-      - name: Check if test script exists
-        id: check-test
-        run: |
-          if npm run | grep -q "test"; then
-            echo "has-test=true" >> $GITHUB_OUTPUT
-          else
-            echo "has-test=false" >> $GITHUB_OUTPUT
-          fi
-
       - name: Run Tests with Coverage
-        if: steps.check-test.outputs.has-test == 'true'
         run: npm test -- --coverage --passWithNoTests
         env:
           CI: true
 
+      # 6. Upload Coverage
       - name: Upload Coverage Reports
-        if: steps.check-test.outputs.has-test == 'true'
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: ${{ inputs.path }}/coverage
           retention-days: 30
 
+      # 7. Build
       - name: Build
         run: npm run build
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: build-artifacts
+          name: dist
           path: ${{ inputs.path }}/dist
           retention-days: 7
